added measurements status field
