# src/main/java/com/diabunity/diabunityapi/models/Measurement.java
@@ -22,14 +22,18 @@ public class Measurement {
   @Field
   private String comments;
 
+  @Field
+  private MeasurementStatus status;
+
   public Measurement(String userId, double measurement,
                      LocalDateTime timestamp, MeasurementSource source,
-                     String comments) {
+                     String comments, MeasurementStatus status) {
     this.userId = userId;
     this.measurement = measurement;
     this.timestamp = timestamp;
     this.source = source;
     this.comments = comments;
+    this.status = status;
   }
 
   public String getUserId() {
@@ -63,4 +67,8 @@ public class Measurement {
   public String getComments() { return comments; }
 
   public void setComments(String comments) { this.comments = comments; }
+
+  public MeasurementStatus getStatus() { return status; }
+
+  public void setStatus(MeasurementStatus status) { this.status = status; }
 }
